Here's the state of things after the talk

--- a/nnet1.ipynb
+++ b/nnet1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5e0455b2",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6f9719d9",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e757ece4",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "83953d0d",
    "metadata": {},
    "outputs": [],
@@ -115,10 +115,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "5a2c867a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Batch: 0 Avg Loss: 0.5491592104662927\n",
+      "Batch: 100 Avg Loss: 0.00847639077551893\n",
+      "Batch: 200 Avg Loss: 0.003082283737771731\n",
+      "Batch: 300 Avg Loss: 0.0030470398686633813\n",
+      "Batch: 400 Avg Loss: 0.002861414868185601\n",
+      "Batch: 500 Avg Loss: 0.002474556564728486\n",
+      "Batch: 600 Avg Loss: 0.0022593464211574095\n",
+      "Batch: 700 Avg Loss: 0.0018903764481437455\n",
+      "Batch: 800 Avg Loss: 0.0016726885267298053\n",
+      "Batch: 900 Avg Loss: 0.0009986231940887513\n"
+     ]
+    }
+   ],
    "source": [
     "for batch in range(1000):\n",
     "    loss = 0\n",
@@ -133,13 +150,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "cf17d5e7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.07472094845509934]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test([0.4,0.2])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55c4b2e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
